<resources>
    <string name="app_name">RoomDatabase</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name:</string>
    <string name="enter_name">Enter name</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age:</string>
    <string name="enter_age">Enter age</string>
    <string name="insert">Insert</string>
</resources>
